Alterando a estilização para a área do venedor

--- a/TechBayV01/TechBayV01.csproj
+++ b/TechBayV01/TechBayV01.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="Pages\Shared\_LayoutLogin.cshtml.css" />
+    <Compile Include="Pages\Shared\_LayoutVendedor.cshtml.css" />
   </ItemGroup>
 
   <ItemGroup>
